# ellm

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dprint.json
.github/actions/setup-rust/: action.yml
.github/setup-rust/: action.yml
.github/workflows/: ci.yaml  claude.yml
src/: cli.rs  client.rs  config.rs  error.rs  lib.rs  main.rs
tests/: integration_test.rs
