[package]
name = "ellm"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/yourusername/ellm"
description = "A CLI client for interacting with Claude AI and other LLMs via the Anthropic API"

[lib]
name = "ellm"
path = "src/lib.rs"

[[bin]]
name = "ellm"
path = "src/main.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Serialization
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
dirs = "5.0"
json = "0.12.4"
toml = "0.8"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"

[features]
# Feature flag for live API tests that require a real API key
live_api_tests = []
